--- a/CarRepairShop/src/views/pages/Services.ejs
+++ b/CarRepairShop/src/views/pages/Services.ejs
@@ -273,4 +273,5 @@
     </div>
 
     <script src="/js/Services.js" nonce="<%= nonce %>"></script>
+    <script src="/js/Services.js" nonce="<%= nonce %>"></script>
 </body>
