--- a/CarRepairShop/src/views/layout.ejs
+++ b/CarRepairShop/src/views/layout.ejs
@@ -12,15 +12,9 @@
     <link rel="stylesheet" href="/css/app.css">
     <link rel="manifest" href="/js/manifest.json">
     <link rel="icon" type="image/png" href="/images/icon.png">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-        <!-- Local bootstrap.js-->
-        <script src="/js/bootstrap.js" nonce="<%= nonce %>"></script>
+        <!-- Local js-->
         <script src="/js/app.js" nonce="<%= nonce %>"></script>
         <!-- Global bootstrap js-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js"
-            nonce="<%= nonce %>"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
             nonce="<%= nonce %>"></script>
             
@@ -37,9 +31,9 @@
 
 <body>
     
-    <%- include('./partials/header') %> <!-- This will include your header -->
+    <%- include('./partials/header') %>
     <main>
-        <%- body %> <!-- This will be replaced with the page content -->
+        <%- body %>
     </main>
 
 </body>
