--- a/CarRepairShop/src/views/pages/AboutUs.ejs
+++ b/CarRepairShop/src/views/pages/AboutUs.ejs
@@ -90,7 +90,7 @@
             </div>
         </div>
     </section>
-    <div class="footer">
+    <div class="footer pt-2">
         <div class="container">
             <p>&copy; 2023 Car Repair Shop - Odre, LV-3285</p>
             <p class="mb-2">
@@ -99,14 +99,15 @@
 
             <!-- Language Switcher Links in Footer -->
             <div class="language-switcher-footer">
-                <a href="/?lang=en" class="footer-link">🇬🇧 English</a> |
-                <a href="/?lang=lv" class="footer-link">🇱🇻 Latviešu valoda</a> |
-                <a href="/?lang=ru" class="footer-link">🇷🇺 Русский язык</a> |
-                <a href="/?lang=de" class="footer-link">🇩🇪 Deutsche Sprache</a>
+                <a href="/?lang=en" class="footer-link"><span class="flag-icon flag-icon-gb"></span> English</a> |
+                <a href="/?lang=lv" class="footer-link"><span class="flag-icon flag-icon-lv"></span> Latviešu valoda</a>
+                |
+                <a href="/?lang=ru" class="footer-link"><span class="flag-icon flag-icon-ru"></span> Русский язык</a> |
+                <a href="/?lang=de" class="footer-link"><span class="flag-icon flag-icon-de"></span> Deutsche
+                    Sprache</a>
             </div>
         </div>
     </div>
-
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=<%= apiKey %>&callback=initMap"
         nonce="<%= nonce %>">
         </script>
