--- a/CarRepairShop/src/views/pages/Admin.ejs
+++ b/CarRepairShop/src/views/pages/Admin.ejs
@@ -44,7 +44,7 @@
                         <h5 class="text-white text-center"><%= __('Users') %></h5>
                         <div class="d-grid gap-2 mb-4">
                           <select id="userFilter" class="btn btn-outline-secondary text-white text-start">
-                            <option value="all"><%= __('All Users') %></option>
+                            <option value="all" selected><%= __('All Users') %></option>
                             <option value="active"><%= __('Active Users') %></option>
                             <option value="withProjects"><%= __('Users With Projects') %></option>
                             <option value="admins"><%= __('Admins') %></option>
@@ -62,9 +62,11 @@
                         <div class="d-grid gap-2 mb-4">
                           <select id="projectFilter" class="btn btn-outline-secondary text-white text-start">
                             <option value="all"><%= __('All Projects') %></option>
-                            <option value="delayed"><%= __('Delayed Projects') %></option>
                             <option value="active"><%= __('Active Projects') %></option>
-                            <option value="finished"><%= __('Finished Projects') %></option>
+                            <option value="completed"><%= __('Completed Projects') %></option>
+                            <option value="delayed"><%= __('Delayed Projects') %></option>
+                            <option value="pending"><%= __('Pending Projects') %></option>
+                            <option value="cancelled"><%= __('Cancelled Projects') %></option>
                           </select>
                         
                           <input id="projectSearchInput" class="form-control bg-dark text-white border-white" type="text" placeholder="<%= __('Search by ID, Username, or Info') %>">
