Fixxed font and finished admin panel

--- a/CarRepairShop/public/css/app.css
+++ b/CarRepairShop/public/css/app.css
@@ -100,11 +100,7 @@
     flex-direction: column;
     min-height: 100vh;
     overflow-x: hidden;
-    font-family: "Poppins"
-  }
-
-  *{
-    font-family: "Poppins"
+    font-family: "Poppins", sans-serif !important;
   }
 
   .wrapper {
