--- a/src/views/pages/Profile.ejs
+++ b/src/views/pages/Profile.ejs
@@ -13,7 +13,7 @@
       
         <p class="profile-item">
           <span class="profile-label"><%= __('Name') %>:</span>
-          <span><span id="name" class="profile-value">johndoe</span>&nbsp;&nbsp;<a type="button" class=" text-white" tabindex="0"
+          <span><span id="name" class="profile-value"></span>&nbsp;&nbsp;<a type="button" class=" text-white" tabindex="0"
           id="change-name-button"><svg  xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 24 24" fill="currentColor">
             <path d="M3 17.25V21h3.75l11.06-11.06-3.75-3.75L3 17.25zM22.71 7.04a1 1 0 0 0 0-1.41l-2.34-2.34a1 1 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"/>
         </svg>
@@ -23,7 +23,7 @@
         </p>
         <p class="profile-item">
           <span class="profile-label"><%= __('Username') %>:</span>
-          <span><span id="username" class="profile-value">John_doe</span>&nbsp;&nbsp;<a type="button" class=" text-white" tabindex="0"
+          <span><span id="username" class="profile-value"></span>&nbsp;&nbsp;<a type="button" class=" text-white" tabindex="0"
           id="change-username-button"><svg  xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 24 24" fill="currentColor">
             <path d="M3 17.25V21h3.75l11.06-11.06-3.75-3.75L3 17.25zM22.71 7.04a1 1 0 0 0 0-1.41l-2.34-2.34a1 1 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"/>
         </svg>
@@ -32,7 +32,7 @@
         </p>
         <p class="profile-item">
           <span class="profile-label"><%= __('Email') %>:</span>&nbsp;&nbsp;
-          <span id="email" class="profile-value">johndoe@example.com</span>
+          <span id="email" class="profile-value"></span>
         </p>
         <p class="profile-item">
           <span class="profile-label"><%= __('Password') %>:</span>
